--- a/layout3/index3.html
+++ b/layout3/index3.html
@@ -3,19 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Layout3</title>
     <link rel="stylesheet" href="style3.css">
-    <title>Web Layout</title>
 </head>
 <body>
-    <header> Header</header>
+    <header>Header</header>
     <nav>Navigation Menu</nav>
-    <main>
-        <aside> Content</aside>
-        <section>
-            Main Content
-        </section>
-        <aside>Content</aside>
-    </main>
-    <footer>Footer</footer>
+    <div class="container">
+        <div>Side Content</div>
+        <div> Main Content</div>
+        <div>Side Content</div>
+    </div>
+   <footer>Footer</footer>
 </body>
 </html>
